Fix env switcher button spacing.

--- a/gui/src/app/components/env-switcher/list/_list.scss
+++ b/gui/src/app/components/env-switcher/list/_list.scss
@@ -57,5 +57,10 @@
 
   .create-new-model {
     padding: 10px;
+
+    button {
+      width: 100%;
+      margin: 0;
+    }
   }
 }
